web_portal/plugins/core/static/core.css
.widget-inner.core__links {
    display: grid;
    grid-template-columns: repeat(3, 32%);
    justify-content: center;
    gap: 10px;
}

.widget-inner.core__links a {
    border-radius: 10px;
    padding: 3rem;
    text-decoration: none;
    font-family: var(--font-family-title);
    font-size: 1.5em;
    text-align: center;
    box-shadow: 4px 4px 0px black;
}

.widget-inner.core__links a:hover {
    transition-duration: 400ms;
    background-color: black;
    color: var(--font-light);
}

.core__search-form {
    max-width: none;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-bottom: 10px;
}

.core__search-form input {
    width: 50%;
}

.core__search-form input:focus {
    outline: solid black 2px;
}

@media(max-width:640px) {
    .widget-inner.core__links {
        grid-template-columns: repeat(2, 200px);
    }
}

@media(max-width:500px) {
    .widget-inner.core__links a {
        padding: 2rem 1rem;
    }
}

@media(max-width:490px) {
    .widget-inner.core__links {
        grid-template-columns: 100%;
    }
}

